# philoagents

./: docker-compose.yml  makefile  test.py
philoagents-api/: .gitignore  Dockerfile  main.py  pyproject.toml  run_graph.py
philoagents-api/data/: evaluation_dataset.json  extraction_metadata.json
philoagents-api/src/philoagents/: __init__.py  config.py  test_service.py
philoagents-api/src/philoagents/application/: __init__.py  long_term_memory.py
philoagents-api/src/philoagents/application/conversation_service/: generate_response.py  reset_conversation.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: chains.py  edges.py  graph.py  graph_diagram.md  nodes.py  state.py  tools.py
philoagents-api/src/philoagents/application/data/: deduplicate_documents.py  extract.py
philoagents-api/src/philoagents/application/evaluation/: generate_dataset.py
philoagents-api/src/philoagents/application/rag/: embeddings.py  retrievers.py  splitters.py
philoagents-api/src/philoagents/domain/: evaluation.py  exceptions.py  philosopher.py  philosopher_factory.py  prompts.py
philoagents-api/src/philoagents/infrastructure/: api.py  opik_utils.py
philoagents-api/src/philoagents/infrastructure/mongo/: __init__.py  client.py  indexes.py
philoagents-api/tools/: __init__.py  create_long_term_memory.py
