[project]
name = "philoagents-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "langchain-core>=1.2.5",
    "langchain-groq>=0.2.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "opik>=1.4.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
]
